add http tests
